refactor: Stream.toList()로 수정